# NeuralBallisticCalculator

./: CMakeLists.txt  make_dataset.py  model.py  model_test.py  prepare_data.py  setup.py  test.py  test_model.py  test_optim.py  train_functions.py  train_model.py
cpp_src/: ballistic_functions.h  linspace.h  main.cpp
make_data/: BallisticFunctions.py  display_data.py  interpolate_data.py  make_dataset.py
make_data/fallback_py_funcs/: BallisticsCalculator.py  py_make_dataset.py
